complete unit testing for the service layer